k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore-api
  namespace: petstore
  labels:
    app: petstore-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: petstore-api
